# mni-models_colin27-lin

./: ChangeLog  Makefile.am  NEWS  README  colin27_t1_tal_lin_ntags_1000_bg.tag  colin27_t1_tal_lin_ntags_1000_nobg.tag  colin_to_icbm152_2009a.xfm  colin_to_icbm152_2009a_grid_0.mnc  configure.ac  epm-header.in
